--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,19 +1,20 @@
-
 server {
-        listen 80;
-        server_name localhost;
+    listen 80;
+    server_name localhost;
 
-        root /var/www/html/src/public;
-        index index.php index.html;
+    root /var/www/html/src/public;
+    location / {
+        try_files $uri /index.php$is_args$args;
+    }
 
-        location / {
-            try_files $uri $uri/ /index.php?$args;
-        }
+    location ~ ^/index\.php$(/|$) {
+         include fastcgi_params;
+         fastcgi_pass php-fpm:9000;
+         fastcgi_index index.php;
+         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
 
-        location ~ \.php$ {
-           include fastcgi_params;
-           fastcgi_pass php-fpm:9000;
-           fastcgi_index index.php;
-           fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        }
+     location ~ \.php$ {
+        return 404;
+     }
 }
